# rust-evegfx

./: Cargo.toml
evegfx/: Cargo.toml
evegfx-cli/: Cargo.toml
evegfx-cli/src/: main.rs
evegfx-hal/: Cargo.toml
evegfx-hal/src/: lib.rs
evegfx-macros/: Cargo.toml
evegfx-macros/src/: lib.rs  parsers.rs
evegfx-spidriver/: Cargo.toml
evegfx-spidriver/src/: lib.rs
evegfx/src/: color.rs  commands.rs  config.rs  display_list.rs  error.rs  graphics.rs  graphics_mode.rs  host_commands.rs  init.rs  interface.rs  lib.rs  low_level.rs  memory.rs  models.rs  registers.rs  strfmt.rs
evegfx/src/commands/: command_word.rs  coprocessor.rs  options.rs  strfmt.rs  waiter.rs
evegfx/src/display_list/: options.rs  shape_builder.rs
evegfx/src/graphics/: bitmap.rs  color.rs  pos.rs
evegfx/src/interface/: command.rs  fake.rs
evegfx/src/low_level/: host_commands.rs  registers.rs
evegfx/src/memory/: ptr.rs  region.rs  slice.rs
evegfx/src/models/: bt815.rs  fake.rs
