[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
description = "Currently just a test utility for the evegfx crate"
edition = "2018"
license = "MIT"
name = "evegfx-cli"
repository = "https://github.com/apparentlymart/rust-evegfx/"
version = "0.6.0"

[dependencies]
embedded-hal = "0.2.4"
evegfx = {path = "../evegfx", version = "0.6.0"}
evegfx-spidriver = {path = "../evegfx-spidriver", version = "0.6.0"}
serial-core = "0.4.0"
serial-embedded-hal = "0.1.2"
spidriver = "0.1.0"
