[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
description = "Adapter for the evegfx crate when accessing EVE via embedded-hal SPI"
edition = "2018"
license = "MIT"
name = "evegfx-hal"
version = "0.6.0"

[dependencies]
embedded-hal = "0.2.4"
evegfx = {path = "../evegfx", version = "0.6.0"}
