[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
name = "evegfx-macros"
repository = "https://github.com/apparentlymart/rust-evegfx/"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
nom = "6.0.1"
proc-macro2 = "1.0.24"
quote = "1.0"
syn = {version = "1.0.56", features = ["full"]}
