[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
description = "Procedural macros for use with the evegfx crate"
edition = "2018"
license = "MIT"
name = "evegfx-macros"
repository = "https://github.com/apparentlymart/rust-evegfx/"
version = "0.3.0"

[lib]
proc-macro = true

[dependencies]
nom = "6.0.1"
proc-macro2 = "1.0.24"
quote = "1.0"
syn = {version = "1.0.56", features = ["full"]}
