[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
license = "MIT"
name = "evegfx-spidriver"
repository = "https://github.com/apparentlymart/rust-evegfx/"
version = "0.2.0"

[dependencies]
embedded-hal = "0.2.4"
evegfx = {path = "../evegfx"}
evegfx-hal = {path = "../evegfx-hal"}
spidriver = "0.1.0"
