[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
description = "Adapter for the evegfx crate when accessing EVE via a SPIDriver interface"
edition = "2018"
license = "MIT"
name = "evegfx-spidriver"
repository = "https://github.com/apparentlymart/rust-evegfx/"
version = "0.5.0"

[dependencies]
embedded-hal = "0.2.4"
evegfx = {path = "../evegfx", version = "0.5.0"}
evegfx-hal = {path = "../evegfx-hal", version = "0.5.0"}
spidriver = "0.1.0"
