[package]
name = "evegfx"
version = "0.6.0"

authors = ["Martin Atkins <mart@degeneration.co.uk>"]
description = "Driver for the Bridgetek/FTDI EVE family of display controllers"
edition = "2018"
license = "MIT"
repository = "https://github.com/apparentlymart/rust-evegfx/"

[dependencies]
evegfx-macros = {path = "../evegfx-macros", version = "0.3.0"}
num_enum = {version = "0.5.1", default_features = false}
